Add is_enabled property for Wallet model
