# app/Models/Wallet.php
@@ -9,6 +9,7 @@ use Illuminate\Database\Eloquent\Model;
  * @property string id
  * @property string name
  * @property string address
+ * @property string is_enabled
  * @property string user_id
  * @property string created_at
  * @property string updated_at
@@ -25,7 +26,17 @@ class Wallet extends Model
     protected $fillable = [
         'name',
         'address',
+        'is_enabled',
         'chain_id',
+    ];
+
+    /**
+     * The attributes that should be cast.
+     *
+     * @var array<string, string>
+     */
+    protected $casts = [
+        'is_enabled' => 'boolean',
     ];
 
     public function chain()
